<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Nombre de la App -->
    <string name="app_name">SimulaGo</string>

    <!-- Textos de la Barra de Navegación -->
    <string name="nav_home">Inicio</string>
    <string name="nav_calculator">Calculadora</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_settings">Ajustes</string>

    <!-- Textos de la Pantalla de la Calculadora -->
    <string name="header_greeting">Hola, bienvenido</string>
    <string name="header_subtitle">Simula tu próximo crédito</string>
    <string name="label_vehicle_price">Valor del Vehículo</string>
    <string name="label_down_payment">Cuota Inicial</string>
    <string name="label_loan_term">Plazo (meses)</string>
    <string name="hint_interest_rate">Tasa de Interés Mensual (%)</string>
    <string name="button_simulate">¡Simular Ahora!</string>

    <!-- Textos de la Tarjeta de Resultados -->
    <string name="result_monthly_payment_label">Tu cuota mensual sería:</string>
    <string name="result_total_interest_label">Total de Intereses</string>
    <string name="result_total_loan_cost_label">Costo Total del Crédito</string>

    <!-- Mensajes de Error -->
    <string name="error_enter_interest_rate">Por favor, ingresa una tasa de interés.</string>
    <string name="error_interest_rate_positive">La tasa de interés debe ser un número positivo.</string>
    <string name="error_no_amount_to_finance">El valor a financiar debe ser mayor a cero.</string>
    <string name="error_invalid_interest_rate">Formato de tasa de interés inválido.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_no_amortization_data">error no tabla</string>
</resources>